Added firebase connection, foundation navbar and accordion test

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -31,9 +31,9 @@
   },
   "generator-ng-component": {
     "routeDirectory": "client/app/",
-    "directiveDirectory": "client/app/",
-    "filterDirectory": "client/app/",
-    "serviceDirectory": "client/app/",
+    "directiveDirectory": "client/components/",
+    "filterDirectory": "client/components/",
+    "serviceDirectory": "client/components/",
     "basePath": "client",
     "moduleName": "",
     "filters": [
