--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
-    "angular-foundation-6": "^0.9.34"
+    "angular-foundation-6": "^0.9.34",
+    "foundation-sites": "^6.2.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
